Fixed bug in mobile layout that caused footer to overlap slideshow controls

--- a/site/css/kbp-internal.css
+++ b/site/css/kbp-internal.css
@@ -280,6 +280,7 @@ li#instagram a {
     	left: auto;
     	right: 0;
     	width: 3rem;
+        height: 3rem;
     }
 
     article {
